Update para todas las practicas

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 Practicas
 .vscode
-P1/.vscode
-P1/tools
-P1/obj
-P1/bin
+P*/.vscode
+P*/tools
+P*/obj
+P*/bin
 Libro1.xlsx
 Tablas_MDD_2021-22.xls
 test
